<resources>
    <string name="app_name">Pertemuan1</string>
    <string name="labelapp">LOGIN USER</string>
    <string name="un">Username</string>
    <string name="ps">Password</string>
    <string name="btn">Sign-In</string>
    <string name="hsl">Ini tampilan hasil</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="masukkan_username">Masukkan Username</string>
    <string name="appname">Pendaftaran</string>
    <string name="label">PENDAFTARAN</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="butn">Daftar</string>
    <string name="telp">Telp</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="masukkan_telp">Masukkan No Telpon</string>
</resources>
